--- a/CloseMenu/index.html
+++ b/CloseMenu/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <div class="title">
+      <p class="fast">Estética<br>Automotiva</p>
+    </div>
     <div id="toggle"></div>
     <div id="sidebar">
       <ul>
@@ -16,7 +19,7 @@
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Serviços</a></li>
         <li><a href="#">Equipe</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#">Contatos</a></li>
         <li><a href="#">Portifólio</a></li>
       </ul>
     </div>
